--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
 header{
-	padding-top: 30px;
-	padding-bottom: 80px;
 	margin-bottom: 10px;
 	color: #fcf7e8;
 	background-color: #454544;
@@ -28,14 +26,12 @@ ul, h2, h1, h3{
 	font-family: 'Raleway', sans-serif;
 	margin-bottom: 20px;
 	font-size: 20px;
-	margin-left: 20px;
 }
 
 p{
 	font-family: 'Raleway', sans-serif;
 	margin-bottom: 20px;
 	font-size: 17px;
-	margin-left: 20px;
 }
 
 h3{
@@ -96,11 +92,9 @@ a:hover {
 }
 
 nav, li.links{
-	padding-top: 10px;
-	padding-bottom: 10px;
 	display: inline;
 	font-family: 'Playfair Display', serif;
-	font-size: 25px;
+	font-size: 40px;
 	padding-right: 40px;
 	color: #fcf7e8;
 }
@@ -113,20 +107,6 @@ a:link, a:visited {
 a:hover {
 	color: #e8e8fc;
 	text-decoration: none;
-}
-
-nav{
-	float: right;
-}
-
-.description{
-	margin-top: 20px;
-	max-width: 600px;
-}
-
-.CLEANSE{
-	margin-right: 20px;
-	float: right;
 }
 
 .bodylink {
@@ -146,17 +126,15 @@ nav{
 	color: grey;
 }
 
-.music{
-	display: inline;
-	margin: 0 auto;
-	width: 25%;
-	margin-bottom: 20px;
-}
-
-iframe.music{
-	margin-left: 20px;
+iframe{
+	margin-bottom: 25px;
 }
 
 .enterbg{
 	background-color: #00915e;
+}
+
+nav{
+	background-color: #454544;
+	font-size: 40px;
 }
