--- a/style.css
+++ b/style.css
@@ -5,16 +5,14 @@ header{
 }
 
 .title{
-	font-family: 'Playfair Display', serif;
-	font-weight: 900;
-	font-style: italic;
+	font-family: 'Vollkorn', serif;
 	margin-left: 20px;
 	font-size: 70px;
 	margin-bottom: -50px;
 }
 
 .subtitle{
-	font-family: 'Playfair Display', serif;
+	font-family: 'Vollkorn', serif;
 	position: relative;
 	margin-left: 503.5px;
 	margin-right: 523.5px;
@@ -23,19 +21,19 @@ header{
 }
 
 ul, h2, h1, h3{
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	margin-bottom: 20px;
 	font-size: 20px;
 }
 
 p{
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	margin-bottom: 20px;
 	font-size: 17px;
 }
 
 h3{
-	font-family: 'Playfair Display', serif;
+	font-family: 'Vollkorn', serif;
 	margin-bottom: 20px;
 	font-size: 30px;
 }
@@ -45,8 +43,8 @@ li{
 }
 
 h1.entertitle{
-	font-family: 'Playfair Display', serif;
-	font-weight: 900;
+	font-family: 'Vollkorn', serif;
+	font-weight: 700;
 	font-style: italic;
 	font-size: 100px;
 	color: #fcf7e8;
@@ -66,7 +64,7 @@ h1.entertitle{
 }
 
 a.button{
-	font-family: 'Playfair Display', serif;
+	font-family: 'Vollkorn', serif;
 	font-style: italic;
 	font-size: 50px;
 	color: #fcf7e8;
@@ -93,7 +91,7 @@ a:hover {
 
 nav, li.links{
 	display: inline;
-	font-family: 'Playfair Display', serif;
+	font-family: 'Vollkorn', serif;
 	font-size: 40px;
 	padding-right: 40px;
 	color: #fcf7e8;
@@ -111,8 +109,8 @@ a:hover {
 
 .bodylink {
 	text-decoration: none;
-	font-family: 'Playfair Display', serif;
-	font-weight: 900;
+	font-family: 'Vollkorn', serif;
+	font-weight: 700;
 	font-style: italic;
 	font-size: 50px;
 
